--- a/app/(post)/2026/test/page.mdx
+++ b/app/(post)/2026/test/page.mdx
@@ -4,7 +4,7 @@ export const metadata = {
   openGraph: {
     title: '测试',
     description: '这是一篇文章',
-    images: [{ url: '/og/making-the-web-faster' }]
+    images: [{ url: '/og/test' }]
   }
 }
 
