--- a/app/(post)/2026/test/page.mdx
+++ b/app/(post)/2026/test/page.mdx
@@ -1,10 +1,10 @@
 export const metadata = {
-  title: '测试',
-  description: '这是一篇文章',
+  title: 'test',
+  description: 'xyz',
   openGraph: {
-    title: '测试',
-    description: '这是一篇文章',
-    images: [{ url: '/og/test' }]
+    title: 'test',
+    description: 'xyz',
+    images: [{ url: '/og/test/' }]
   }
 }
 
