--- a/app/(post)/2026/test/page.mdx
+++ b/app/(post)/2026/test/page.mdx
@@ -4,10 +4,10 @@ export const metadata = {
   openGraph: {
     title: 'test',
     description: 'xyz',
-    images: [{ url: '/og/test/' }]
+    images: [{ url: '/og/test' }]
   }
 }
 
-这是测试。
+this is a test.
 
-看看如何？
+take a look?
